# ChangeLog for games-rpg/magus
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*magus-1.3.3 (28 May 2011)

  28 May 2012; Martin Väth <martin@mvath.de>
  Cleaner dependencies and messages for colliding USE-flags.
  Rely on automagic eautopoint. Add support for optional imagemagick.

  17 May 2012; Martin Väth <martin@mvath.de>
  Remove REQUIRED_USE; default to firefox

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  16 Apr 2012; Martin Väth <martin@mvath.de>
  Use eautopoint and relax gettext runtime dependency

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  13 Mar 2012; Martin Väth <martin@mvath.de>
  Fix dependency on dev-cpp/gtkmm: slot 3 is not (yet?) supported upstream.
  Introduce pngcrush useflag.

  30 Sep 2011; Martin Väth <martin@mvath.de>
  Fix dependencies, in particular do not require optional media-gfx/pngcrush

  29 May 2011; Martin Väth <martin@mvath.de>
  Add REQUIRED_USE and fix some missing dependencies.

  28 May 2011; Martin Väth <martin@mvath.de>
  Version bump and patch for missing autopoint support.
  Remove old ebuild.

*magus-1.3.1 (10 Mar 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  25 Jul 2010; Martin Väth <martin@mvath.de> :
  Do not install unnecessary .h files.
  mozilla-firefox->firefox.
  USE flags: Add icecat, rename kde->konqueror, pdf->acroread.
  Let firefox USE take precedence.

  31 Mar 2010; Martin Väth <martin@mvath.de> :
  +magus-1.3.1.ebuild +magus-99999999.ebuild -magus-live-1.3.1-r6.ebuild:
  Rename magus-live into magus: Since now some tarball is available and the
  monotone repository is too often inaccessible, we do not install the
  live-version by default. If you want to install the live version unmask
  the magus-99999999 ebuild with
  echo 'games-rpg/magus **' >>/etc/portage/package.keywords
  Note that you can prevent the live version from fetching the monotone